@@ -20,6 +20,13 @@
 
 /* RTL overides of public.css */
 
+/* Fix to get bulleted and numbered lists to stay inside the content area */
+#content ol {
+    margin-right: 1.5em;
+}
+#content ul {
+    margin-right: 1em;
+}
 
 #portal-globalnav li a {
     border-right: none;
